--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
       "^.+\\.(ts|tsx)$": "<rootDir>/preprocessor.js"
     },
     "testRegex": "/__tests__/.*\\.(ts|tsx|js)$"
+  },
+  "dependencies": {
+    "@types/lodash": "^4.14.50",
+    "lodash": "^4.17.4"
   }
 }
